tests/baselines/reference/narrowingGenericTypeFromInstanceof01.errors.txt
narrowingGenericTypeFromInstanceof01.ts(13,17): error TS2345: Argument of type 'B<T>' is not assignable to parameter of type 'A<unknown>'.
  Property 'a' is missing in type 'B<T>' but required in type 'A<unknown>'.


==== narrowingGenericTypeFromInstanceof01.ts (1 errors) ====
    class A<T> {
        constructor(private a: string) { }
    }
    
    class B<T> {
    }
    
    function acceptA<T>(a: A<T>) { }
    function acceptB<T>(b: B<T>) { }
    
    function test<T>(x: A<T> | B<T>) {
        if (x instanceof B) {
            acceptA(x);
                    ~
!!! error TS2345: Argument of type 'B<T>' is not assignable to parameter of type 'A<unknown>'.
!!! error TS2345:   Property 'a' is missing in type 'B<T>' but required in type 'A<unknown>'.
!!! related TS2728 narrowingGenericTypeFromInstanceof01.ts:2:17: 'a' is declared here.
        }
    
        if (x instanceof A) {
            acceptA(x);
        }
    
        if (x instanceof B) {
            acceptB(x);
        }
    
        if (x instanceof B) {
            acceptB(x);
        }
    }